--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portw",
-  "homepage": "https://praj.co.uk",
+  "homepage": "http://praj.co.uk",
   "private": true,
   "version": "0.0.0",
   "type": "module",
