--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^9.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-scroll-motion": "^0.3.2"
   },
   "devDependencies": {
